samples/_failures_safe/1761248155_a1f658_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_269833a1.c: In function ‘main’:
./samples/SAFE/__tmp_269833a1.c:149:5: error: expected expression at end of input
  149 |     print_hex(decompressed,
      |     ^~~~~~~~~
./samples/SAFE/__tmp_269833a1.c:149:5: error: expected declaration or statement at end of input
